Bug 260874 - Turning power management service off and back on again caused a crash
Summary: Turning power management service off and back on again caused a crash
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-21 13:05 UTC by Gregor Petrin
Modified: 2011-01-28 04:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor Petrin 2010-12-21 13:05:31 UTC
Application: kded4 ($Id: kded.cpp 1192875 2010-11-04 08:22:15Z ervin $)
KDE Platform Version: 4.5.85 (4.6 Beta2)
Qt Version: 4.7.1
Operating System: Linux 2.6.34.7-0.5-default i686
Distribution: "openSUSE 11.3 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:
I was in the KDE Services Configuration trying to find out which service caused KDED usage to go over 90%. When I turned off Power Management and then turned it on again, I got a crash.

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb58b0710 (LWP 11627))]

Thread 2 (Thread 0xad65eb70 (LWP 11638)):
#0  0xb6ced494 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0xb5b026e6 in g_main_context_acquire () from /usr/lib/libglib-2.0.so.0
#2  0xb5b03e9d in ?? () from /usr/lib/libglib-2.0.so.0
#3  0xb5b0460e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0xb6e92da7 in QEventDispatcherGlib::processEvents (this=0x82b5ba0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0xb6e6389d in QEventLoop::processEvents (this=0xad65e2b0, flags=...) at kernel/qeventloop.cpp:149
#6  0xb6e63ac9 in QEventLoop::exec (this=0xad65e2b0, flags=...) at kernel/qeventloop.cpp:201
#7  0xb6d627a9 in QThread::exec (this=0x8211460) at thread/qthread.cpp:490
#8  0xb6e434ad in QInotifyFileSystemWatcherEngine::run (this=0x8211460) at io/qfilesystemwatcher_inotify.cpp:248
#9  0xb6d6539a in QThreadPrivate::start (arg=0x8211460) at thread/qthread_unix.cpp:285
#10 0xb6ce9b25 in start_thread () from /lib/libpthread.so.0
#11 0xb609946e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb58b0710 (LWP 11627)):
[KCrash Handler]
#7  0x006c006e in ?? ()
#8  0xaffb0d44 in PowerDevil::ActionPool::loadAction (this=0x82100c0, actionId=..., group=..., parent=0x83d14f0)
    at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilactionpool.cpp:81
#9  0xaffb48be in PowerDevil::Core::loadProfile (this=0x83d14f0, name=...) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilcore.cpp:304
#10 0xaffb4d94 in PowerDevil::Core::reloadProfile (this=0x83d14f0, state=1) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilcore.cpp:267
#11 0xaffb5401 in PowerDevil::Core::reloadProfile (this=0x83d14f0) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilcore.cpp:231
#12 0xaffb543a in PowerDevil::Core::refreshStatus (this=0x83d14f0) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilcore.cpp:226
#13 0xaffb7f4e in PowerDevil::Core::onBackendReady (this=0x83d14f0) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilcore.cpp:151
#14 0xaffb9456 in PowerDevil::Core::qt_metacall (this=0x83d14f0, _c=QMetaObject::InvokeMetaMethod, _id=20, _a=0xbfca7a9c)
    at /usr/src/debug/kdebase-workspace-4.5.85/build/powerdevil/daemon/powerdevilcore.moc:155
#15 0xb6e6ae5d in QMetaObject::metacall (object=0x83d14f0, cl=QMetaObject::InvokeMetaMethod, idx=24, argv=0xbfca7a9c) at kernel/qmetaobject.cpp:237
#16 0xb6e7affc in QMetaObject::activate (sender=0x86631f8, m=0xaffeb580, local_signal_index=5, argv=0x0) at kernel/qobject.cpp:3272
#17 0xaffb2be5 in PowerDevil::BackendInterface::backendReady (this=0x86631f8) at /usr/src/debug/kdebase-workspace-4.5.85/build/powerdevil/daemon/powerdevilbackendinterface.moc:146
#18 0xaffb2ea1 in PowerDevil::BackendInterface::setBackendIsReady (this=0x86631f8, availableBrightnessControls=..., supportedSuspendMethods=...)
    at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilbackendinterface.cpp:118
#19 0xaffcecce in PowerDevilUPowerBackend::init (this=0x86631f8) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/backends/upower/powerdevilupowerbackend.cpp:116
#20 0xaffb3d5d in PowerDevil::Core::Core (this=0x83d14f0, parent=0x8415448, componentData=...) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/powerdevilcore.cpp:73
#21 0xb032742f in KDEDPowerDevil::init (this=0x8415448) at /usr/src/debug/kdebase-workspace-4.5.85/powerdevil/daemon/kdedpowerdevil.cpp:59
#22 0xb03274a6 in KDEDPowerDevil::qt_metacall (this=0x8415448, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x82204a0)
    at /usr/src/debug/kdebase-workspace-4.5.85/build/powerdevil/daemon/kdedpowerdevil.moc:72
#23 0xb6e6ae5d in QMetaObject::metacall (object=0x8415448, cl=QMetaObject::InvokeMetaMethod, idx=8, argv=0x82204a0) at kernel/qmetaobject.cpp:237
#24 0xb6e75945 in QMetaCallEvent::placeMetaCall (this=0x826fc30, object=0x8415448) at kernel/qobject.cpp:534
#25 0xb6e79b7f in QObject::event (this=0x8415448, e=0x826fc30) at kernel/qobject.cpp:1211
#26 0xb6360414 in QApplicationPrivate::notify_helper (this=0x80b7e78, receiver=0x8415448, e=0x826fc30) at kernel/qapplication.cpp:4445
#27 0xb6369137 in QApplication::notify (this=0xbfca8610, receiver=0x8415448, e=0x826fc30) at kernel/qapplication.cpp:3845
#28 0xb74d07e1 in KApplication::notify (this=0xbfca8610, receiver=0x8415448, event=0x826fc30) at /usr/src/debug/kdelibs-4.5.85/kdeui/kernel/kapplication.cpp:311
#29 0xb6e645be in QCoreApplication::notifyInternal (this=0xbfca8610, receiver=0x8415448, event=0x826fc30) at kernel/qcoreapplication.cpp:732
#30 0xb6e6834c in sendEvent (receiver=0x0, event_type=0, data=0x80582b0) at kernel/qcoreapplication.h:215
#31 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80582b0) at kernel/qcoreapplication.cpp:1373
#32 0xb6e6849c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#33 0xb6e92bd4 in sendPostedEvents (s=0x80ba120) at kernel/qcoreapplication.h:220
#34 postEventSourceDispatch (s=0x80ba120) at kernel/qeventdispatcher_glib.cpp:277
#35 0xb5b03b49 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#36 0xb5b04350 in ?? () from /usr/lib/libglib-2.0.so.0
#37 0xb5b0460e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#38 0xb6e92d5b in QEventDispatcherGlib::processEvents (this=0x80b7e58, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#39 0xb64169aa in QGuiEventDispatcherGlib::processEvents (this=0x80b7e58, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#40 0xb6e6389d in QEventLoop::processEvents (this=0xbfca8574, flags=...) at kernel/qeventloop.cpp:149
#41 0xb6e63ac9 in QEventLoop::exec (this=0xbfca8574, flags=...) at kernel/qeventloop.cpp:201
#42 0xb6e68570 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#43 0xb635e114 in QApplication::exec () at kernel/qapplication.cpp:3719
#44 0xb54c038d in kdemain (argc=1, argv=0x80a12a0) at /usr/src/debug/kdelibs-4.5.85/kded/kded.cpp:907
#45 0x0804e521 in launch (argc=1, _name=0x8052708 "kded4", args=<value optimized out>, cwd=0x0, envc=0, envs=<value optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=
    0x80525a3 "0") at /usr/src/debug/kdelibs-4.5.85/kinit/kinit.cpp:730
#46 0x08050f28 in main (argc=940058392, argv=0x180863d5, envp=0x864ac) at /usr/src/debug/kdelibs-4.5.85/kinit/kinit.cpp:1844

Reported using DrKonqi
Comment 1 Dario Freddi 2010-12-22 23:13:56 UTC
SVN commit 1208702 by dafre:

BUG: 260874

Clear the cache on shutdown

 M  +2 -1      powerdevilactionpool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208702
Comment 2 Dario Freddi 2010-12-22 23:17:44 UTC
SVN commit 1208705 by dafre:

Backport r1208702

CCBUG: 260874

Clear the cache on shutdown


 M  +2 -1      powerdevilactionpool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208705
Comment 3 Christoph Feck 2011-01-28 04:49:57 UTC
Bug 264565 looks like a duplicate (on 4.6.0), so this one probably needs to be reopened.