BUG: 260874

Clear the cache on shutdown

svn path=/trunk/KDE/kdebase/workspace/; revision=1208702